<resources>
    <string name="app_name">Rubiks Cube</string>
    <string name="title_timer">Timer</string>
    <string name="title_solver">Solver</string>
    <string name="insert_cube">Insert Cube</string>
    <string name="up">Up</string>
    <string name="front">Front</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="back">Back</string>
    <string name="empty" />
    <string name="get_solution">get solution</string>
    <string name="generating_solution">generating solution…</string>
    <string name="default_timer">0.00</string>
    <string name="best_time">Best time:</string>
    <string name="average_time">Average time:</string>

    <string name="take">Take</string>
    <string name="table">Table</string>
    <string name="graph">Graph</string>
    <string name="scramble">scramble</string>

    <string name="col1">Time</string>
    <string name="col2">Date</string>
    <string name="help">help</string>
    <string name="title_activity_help_screen">HelpScreenActivity</string>
    <string name="title_activity_ads">AdsActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-8108082184413964/6190542242</string>

</resources>